force-app/main/default/objects/JobApplication__c/fields/AppliedDate__c.field-meta.xml
<CustomField>
    <fullName>AppliedDate__c</fullName>
    <description>Apply job date</description>
    <label>Applied Date</label>
    <type>Date</type>
</CustomField>