force-app/main/default/objects/JobApplication__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company name</description>
    <label>Company</label>
    <length>20</length>
    <type>Text</type>
</CustomField>