force-app/main/default/objects/JobApplication__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role name</description>
    <label>Role</label>
    <length>20</length>
    <type>Text</type>
</CustomField>